--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -38,7 +38,7 @@ main
 
 table
   border-collapse: collapse
-  display: flex
+  width: 90%
   margin: 10px
   td, th  
     border-bottom: 1px solid #ddd
