--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -1,4 +1,5 @@
 {{> html/start title="T-Port" settings=settings }}
+<div class="index-page-container">
 {{> html/header }}
 	<main class="index-main">
 		<div class="google-map">
@@ -22,4 +23,5 @@
 		</div>
 	
 {{> html/footer }}
+</div>
 {{> html/end }}
