--- a/dev-server/app/static-assets/sass/_page-pieces.sass
+++ b/dev-server/app/static-assets/sass/_page-pieces.sass
@@ -5,6 +5,10 @@ body
   font-weight: 300
   background: #fff
   min-width: 300px
+
+.index-page-container
+  width: 100%
+  height: 100%
   display: flex
   flex-direction: column
 
