routes page layout

--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -1,66 +1,85 @@
-{{> html/start title="T-shipping - Routes" settings=settings }}
+{{> html/start title="T-port - Routes" settings=settings }}
 {{> html/header }}
-    <main>
-	<section class="content clearfix">
-		<h2>Routes</h2>
-			<div id="crossing-routes-toggle">
-				<label>Crossing routes: </label>
-        <div class="button r" id="button-9">
-          <input type="checkbox" class="checkbox">
-          <div class="knobs">
-            <span></span>
-          </div>
-          <div class="layer"></div>
-        </div>
-			</div>
-		<table class="entity_table">
-		  <tr>
-			<th>Route number</th>
-			<th>From</th>
-			<th>To</th>
-		  </tr>
-		  <tr>
-			<td><a href="/nested/route_card">66</a></td>
-			<td>Saint-Petersburg</td>
-			<td>New York</td>
-		  </tr>
-		  <tr>
-			<td><a href="/nested/route_card">66</a></td>
-			<td>Saint-Petersburg</td>
-			<td>New York</td>
-		  </tr>
-		  <tr>
-			<td><a href="/nested/route_card">66</a></td>
-			<td>Saint-Petersburg</td>
-			<td>New York</td>
-		  </tr>
-		  <tr>
-			<td><a href="/nested/route_card">66</a></td>
-			<td>Saint-Petersburg</td>
-			<td>New York</td>
-		  </tr>
-		  <tr>
-			<td><a href="/nested/route_card">66</a></td>
-			<td>Saint-Petersburg</td>
-			<td>New York</td>
-		  </tr>
-		  <tr>
-			<td><a href="/nested/route_card">66</a></td>
-			<td>Saint-Petersburg</td>
-			<td>New York</td>
-		  </tr>
-		</table>
-		<div class="pagination-centering">
-		  <div class="pagination">
-			<a href="#">&laquo;</a>
-			<a href="#" class="active">1</a>
-			<a href="#">2</a>
-			<a href="#">3</a>
-			<a href="#">&raquo;</a>
-		  </div>
+<main>
+		<div class="substrate">
+			<h2>Routes</h2>
+			<table>
+				<tr>
+					<th>Route number</th>
+					<th>From</th>
+					<th>To</th>
+				</tr>
+				<tr>
+					<td>90</td>
+					<td>Maly pr. VO</td>
+					<td>Nevsky pr.</td>
+				</tr>
+				<tr>
+					<td>90</td>
+					<td>Maly pr. VO</td>
+					<td>Nevsky pr.</td>
+				</tr>
+				<tr>
+					<td>190</td>
+					<td>Bolshoy pr. VO</td>
+					<td>Sampsonievsky pr.</td>
+				</tr>
+				<tr>
+					<td>190</td>
+					<td>Bolshoy pr. VO</td>
+					<td>Sampsonievsky pr.</td>
+				</tr>
+				<tr>
+					<td>190</td>
+					<td>Bolshoy pr. VO</td>
+					<td>Sampsonievsky pr.</td>
+				</tr>
+				<tr>
+					<td>190</td>
+					<td>Bolshoy pr. VO</td>
+					<td>Sampsonievsky pr.</td>
+				</tr>
+				<tr>
+					<td>190</td>
+					<td>Bolshoy pr. VO</td>
+					<td>Sampsonievsky pr.</td>
+				</tr>
+				<tr>
+					<td>300</td>
+					<td>Devyatkino</td>
+					<td>Kupchino</td>
+				</tr>
+				<tr>
+					<td>300</td>
+					<td>Devyatkino</td>
+					<td>Kupchino</td>
+				</tr>
+				<tr>
+					<td>300</td>
+					<td>Devyatkino</td>
+					<td>Kupchino</td>
+				</tr>
+				<tr>
+					<td>300</td>
+					<td>Devyatkino</td>
+					<td>Kupchino</td>
+				</tr>
+				<tr>
+					<td>300</td>
+					<td>Devyatkino</td>
+					<td>Kupchino</td>
+				</tr>
+				<tr>
+					<td>300</td>
+					<td>Devyatkino</td>
+					<td>Kupchino</td>
+				</tr>
+				<tr>
+					<td>300</td>
+					<td>Devyatkino</td>
+					<td>Kupchino</td>
+				</tr>
+			</table>
 		</div>
-	</section>
-	</main>
-	
 {{> html/footer }}
 {{> html/end }}
