--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -86,6 +86,7 @@ nav {
 .close-pic {
   position: absolute;
   right: 16px;
+  cursor: pointer;
 }
 .close-pic:hover {
   color: #29b8ed;
@@ -226,7 +227,6 @@ nav {
 }
 
 .google-map {
-  position: absolute;
   width: 100%;
   height: 100%;
 }
@@ -750,6 +750,41 @@ table th {
     margin: 0;
     border-radius: 0;
   }
+}
+.transport-card {
+  width: 90%;
+  border-radius: 20px;
+  background: #eee;
+  padding: 20px;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  transition: opacity 0.4s ease;
+  opacity: 0;
+}
+.transport-card h3 {
+  font-size: 1.5em;
+  font-family: Mission, "Mission Gothic Regular";
+}
+
+.google-map-on-card {
+  width: 90%;
+  min-height: 400px;
+  display: grid;
+  margin: 10px;
+}
+
+.closing-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px 0;
+}
+
+.show-card {
+  opacity: 1;
+  display: flex;
 }
 
 /*# sourceMappingURL=styles.css.map */
