--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -102,3 +102,34 @@ table
     width: 100%
     margin: 0
     border-radius: 0
+
+.transport-card
+  width: 90%
+  border-radius: 20px
+  background: #eee
+  padding: 20px
+  display: none
+  flex-direction: column
+  align-items: center
+  margin: 20px
+  transition: opacity 0.4s ease
+  opacity: 0
+  h3
+    font-size: 1.5em
+    font-family: $logo-font
+    
+.google-map-on-card
+  width: 90%
+  min-height: 400px
+  display: grid
+  margin: 10px
+
+.closing-button
+  position: absolute
+  top: 0
+  right: 0
+  margin: 10px 0
+
+.show-card
+  opacity: 1
+  display: flex
