--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -25,77 +25,77 @@
 					<th>To</th>
 					<th>Seats</th>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">directions_bus</i></td>
 					<td>90</td>
 					<td>Maly pr. VO</td>
 					<td>Nevsky pr.</td>
 					<td>48</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">directions_bus</i></td>
 					<td>90</td>
 					<td>Maly pr. VO</td>
 					<td>Nevsky pr.</td>
 					<td>48</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 					<td>133</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 					<td>133</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 					<td>133</td>
 				</tr>
-				<tr>
+				<tr onclick="showTransportCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
 					<td>Devyatkino</td>
@@ -103,6 +103,49 @@
 					<td>133</td>
 				</tr>
 			</table>
+			<div class="transport-card" id="qwe">
+				<div class="closing-button" onclick="showTransportCard()"><i class="material-icons close-pic">close</i></div>
+				<h3>Bus 90</h3>
+				<table>
+					<tr>
+						<th>Stop</th>
+						<th>Time</th>
+					</tr>
+					<tr>
+						<td>Maly pr. VO</td>
+						<td>12:00</td>
+					</tr>
+					<tr>
+						<td>Nevsky pr.</td>
+						<td>13:00</td>
+					</tr>
+					<tr>
+						<td>Bolshoy pr. VO</td>
+						<td>14:00</td>
+					</tr>
+					<tr>
+						<td>Sampsonievsky pr.</td>
+						<td>15:00</td>
+					</tr>
+					<tr>
+						<td>Nevsky pr.</td>
+						<td>16:00</td>
+					</tr>
+					<tr>
+						<td>Bolshoy pr. VO</td>
+						<td>17:00</td>
+					</tr>
+				</table>
+					<div class="google-map-on-card">
+						<!-- Google Maps -->
+						<div id="map"></div>
+						<script type="text/javascript" src="/static-assets/js/google-map.js"></script>
+						<script async defer
+						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZFGV9mhO59Iuq-gVjzw5CSdXQm4Ibuvc&callback=initMap">
+						</script>
+						<!-- /Google Maps -->
+					</div>
+			</div>
 		</div>
 {{> html/footer }}
 {{> html/end }}
