--- a/dev-server/app/static-assets/sass/_header-style.sass
+++ b/dev-server/app/static-assets/sass/_header-style.sass
@@ -18,6 +18,7 @@ nav
   display: flex
   flex-direction: row
   justify-content: flex-start
+  align-items: center
 
 .header-container
   display: flex
@@ -118,8 +119,6 @@ nav
     display: none
   .burger
     display: block
-  //.mobile-find-field
-  //  display: none
 
 .show-mobile-search
   left: 0
