--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -25,77 +25,77 @@
 					<th>To</th>
 					<th>Seats</th>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">directions_bus</i></td>
 					<td>90</td>
 					<td>Maly pr. VO</td>
 					<td>Nevsky pr.</td>
 					<td>48</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">directions_bus</i></td>
 					<td>90</td>
 					<td>Maly pr. VO</td>
 					<td>Nevsky pr.</td>
 					<td>48</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 					<td>120</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 					<td>133</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 					<td>133</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 					<td>133</td>
 				</tr>
-				<tr onclick="showTransportCard()">
+				<tr onclick="showCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
 					<td>Devyatkino</td>
@@ -103,9 +103,9 @@
 					<td>133</td>
 				</tr>
 			</table>
-			<div class="transport-card" id="qwe">
-				<div class="closing-button" onclick="showTransportCard()"><i class="material-icons close-pic">close</i></div>
-				<h3>Bus 90</h3>
+			<div class="card">
+				<div class="closing-button" onclick="showCard()"><i class="material-icons close-pic">close</i></div>
+				<h3>Transport name</h3>
 				<table>
 					<tr>
 						<th>Stop</th>
