--- a/dev-server/app/static-assets/sass/_page-pieces.sass
+++ b/dev-server/app/static-assets/sass/_page-pieces.sass
@@ -6,6 +6,10 @@ body
   background: #fff
   min-width: 300px
 
+@media (max-width: 450px)
+  body
+    font-size: 4vw
+
 .index-page-container
   width: 100%
   height: 100%
