--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -47,6 +47,7 @@ table
     background-color: #f2f2f2
   tr
     background-color: #f8f8f8
+    cursor: pointer
   tr:hover
     background-color: #ddd
   th
@@ -55,6 +56,7 @@ table
     text-align: left
     background-color: $main-color
     color: #fff
+    cursor: default
 
 .filters
   display: flex
@@ -103,7 +105,7 @@ table
     margin: 0
     border-radius: 0
 
-.transport-card
+.card
   width: 90%
   border-radius: 20px
   background: #eee
