--- a/dev-server/app/templates/pages/nested/routes.hbs
+++ b/dev-server/app/templates/pages/nested/routes.hbs
@@ -9,77 +9,120 @@
 					<th>From</th>
 					<th>To</th>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>90</td>
 					<td>Maly pr. VO</td>
 					<td>Nevsky pr.</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>90</td>
 					<td>Maly pr. VO</td>
 					<td>Nevsky pr.</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>190</td>
 					<td>Bolshoy pr. VO</td>
 					<td>Sampsonievsky pr.</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 				</tr>
-				<tr>
+				<tr onclick="showCard()">
 					<td>300</td>
 					<td>Devyatkino</td>
 					<td>Kupchino</td>
 				</tr>
 			</table>
+			<div class="card">
+				<div class="closing-button" onclick="showCard()"><i class="material-icons close-pic">close</i></div>
+				<h3>Route name</h3>
+				<table>
+					<tr>
+						<th>Stop</th>
+						<th>Time</th>
+					</tr>
+					<tr>
+						<td>Maly pr. VO</td>
+						<td>12:00</td>
+					</tr>
+					<tr>
+						<td>Nevsky pr.</td>
+						<td>13:00</td>
+					</tr>
+					<tr>
+						<td>Bolshoy pr. VO</td>
+						<td>14:00</td>
+					</tr>
+					<tr>
+						<td>Sampsonievsky pr.</td>
+						<td>15:00</td>
+					</tr>
+					<tr>
+						<td>Nevsky pr.</td>
+						<td>16:00</td>
+					</tr>
+					<tr>
+						<td>Bolshoy pr. VO</td>
+						<td>17:00</td>
+					</tr>
+				</table>
+					<div class="google-map-on-card">
+						<!-- Google Maps -->
+						<div id="map"></div>
+						<script type="text/javascript" src="/static-assets/js/google-map.js"></script>
+						<script async defer
+						src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZFGV9mhO59Iuq-gVjzw5CSdXQm4Ibuvc&callback=initMap">
+						</script>
+						<!-- /Google Maps -->
+					</div>
+			</div>
 		</div>
 {{> html/footer }}
 {{> html/end }}
