--- a/dev-server/app/static-assets/sass/_header-style.sass
+++ b/dev-server/app/static-assets/sass/_header-style.sass
@@ -62,7 +62,7 @@ nav
   &:hover
     color: $main-color
 
-.find-pic, .burger, .floating-menu
+.burger, .floating-menu
   display: none
 
 .floating-menu
@@ -92,10 +92,6 @@ nav
 @media (max-width: 585px)
   .floating-menu
     top: -130px
-  .find-box
-    display: none
-  .find-pic
-    display: block
   .header-buttons > div
       margin: 0 5px
   header
@@ -107,6 +103,8 @@ nav
     margin: 5px
   .mobile-find-field
     display: flex
+  .find-box
+    display: none
 
 @media (max-width: 875px)
   .floating-menu
