--- a/dev-server/app/static-assets/sass/_header-style.sass
+++ b/dev-server/app/static-assets/sass/_header-style.sass
@@ -49,15 +49,13 @@ nav
   a:hover
     color: $main-color
 
-.favorites-menu,header
+.header-buttons
   .material-icons
     font-size: 32px
 .fa-bookmark
-  font-size: 25px
+  font-size: 24px
 
 .close-pic
-  position: absolute
-  right: 16px
   cursor: pointer
   &:hover
     color: $main-color
