--- a/dev-server/app/templates/pages/nested/stops.hbs
+++ b/dev-server/app/templates/pages/nested/stops.hbs
@@ -105,31 +105,31 @@
 				<h3>Stop name</h3>
 				<table>
 					<tr>
-						<th>Stop</th>
+						<th>Route</th>
 						<th>Time</th>
 					</tr>
 					<tr>
-						<td>Maly pr. VO</td>
+						<td>01</td>
 						<td>12:00</td>
 					</tr>
 					<tr>
-						<td>Nevsky pr.</td>
+						<td>02</td>
 						<td>13:00</td>
 					</tr>
 					<tr>
-						<td>Bolshoy pr. VO</td>
+						<td>03</td>
 						<td>14:00</td>
 					</tr>
 					<tr>
-						<td>Sampsonievsky pr.</td>
+						<td>04</td>
 						<td>15:00</td>
 					</tr>
 					<tr>
-						<td>Nevsky pr.</td>
+						<td>05</td>
 						<td>16:00</td>
 					</tr>
 					<tr>
-						<td>Bolshoy pr. VO</td>
+						<td>06</td>
 						<td>17:00</td>
 					</tr>
 				</table>
