--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -21,85 +21,73 @@
 				<tr>
 					<th>Type</th>
 					<th>Number</th>
-					<th>From</th>
-					<th>To</th>
+					<th>Route</th>
 					<th>Seats</th>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">directions_bus</i></td>
 					<td>90</td>
-					<td>Maly pr. VO</td>
-					<td>Nevsky pr.</td>
+					<td>01</td>
 					<td>48</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">directions_bus</i></td>
 					<td>90</td>
-					<td>Maly pr. VO</td>
-					<td>Nevsky pr.</td>
+					<td>02</td>
 					<td>48</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
+					<td>03</td>
 					<td>120</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
+					<td>04</td>
 					<td>120</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
+					<td>05</td>
 					<td>120</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
+					<td>06</td>
 					<td>120</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">train</i></td>
 					<td>190</td>
-					<td>Bolshoy pr. VO</td>
-					<td>Sampsonievsky pr.</td>
+					<td>07</td>
 					<td>120</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
+					<td>08</td>
 					<td>133</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
+					<td>09</td>
 					<td>133</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
+					<td>10</td>
 					<td>133</td>
 				</tr>
 				<tr onclick="showCard()">
 					<td><i class="material-icons">tram</i></td>
 					<td>300</td>
-					<td>Devyatkino</td>
-					<td>Kupchino</td>
+					<td>11</td>
 					<td>133</td>
 				</tr>
 			</table>
