--- a/dev-server/app/templates/partials/html/footer.hbs
+++ b/dev-server/app/templates/partials/html/footer.hbs
@@ -1,4 +1,5 @@
 		<div class="favorites-menu">
+			<div class="closing-button" onclick="showFavorites()"><i class="material-icons close-pic">close</i></div>
 			<h3>Favorites</h3>
 			<ul>
 				<li><a href="#"><i class="material-icons">directions_bus</i>Bus 46</a></li>
@@ -9,6 +10,7 @@
 			</ul>
 		</div>
 		<div class="login-menu">
+			<div class="closing-button" onclick="showLoginMenu()"><i class="material-icons close-pic">close</i></div>
 			<h3>Sign in</h3>
 			<input type="text" placeholder="Login">
 			<input type="password" placeholder="Password">
