--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -5,7 +5,6 @@
 @import burger
 @import page-pieces
 @import bases
-@import day-night-toggle
 
 main
   width: 100%
@@ -130,7 +129,7 @@ table
   position: absolute
   top: 0
   right: 0
-  margin: 10px 0
+  margin: 5px
   z-index: 2
 
 .show-card
