--- a/dev-server/app/templates/partials/html/header.hbs
+++ b/dev-server/app/templates/partials/html/header.hbs
@@ -1,7 +1,7 @@
 	<header>
 		<div class="header-container">
 		    <div class="header-main-section">
-				<div class="burger" onclick="burgerMenuToggle()">
+				<div class="burger" onclick="burgerMenuToggle(this)">
 					<svg class="ham hamRotate ham8" viewBox="0 0 100 100" width="50" onclick="this.classList.toggle('active')">
 						<path class="line top" d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20" />
 						<path class="line middle" d="m 30,50 h 40" />
@@ -51,5 +51,5 @@
 		</div>
 		<div class="mobile-find-field">
 			<input type="text" placeholder="Search…">
-			<i class="material-icons close-pic" onclick="mobileSearch()">close</i>
+			<div class="mobile-find-field-closing"><i class="material-icons close-pic" onclick="mobileSearch()">close</i></div>
 		</div>
