--- a/dev-server/app/static-assets/sass/_multiselect.sass
+++ b/dev-server/app/static-assets/sass/_multiselect.sass
@@ -1,16 +1,13 @@
 .select-wrapper
-  margin: auto
-  max-width: 600px
-  width: calc(100% - 40px)
+  width: 90%
+  margin: 0 10px
 
 .select-pure__select
   align-items: center
-  background: #f9f9f8
-  border-radius: 4px
-  border: 1px solid rgba(0, 0, 0, 0.15)
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04)
-  box-sizing: border-box
-  color: #363b3e
+  background: #f2f2f2
+  border-radius: 10px
+  border: 1px solid #ddd
+  color: #000
   cursor: pointer
   display: flex
   font-size: 16px
@@ -18,7 +15,6 @@
   justify-content: left
   min-height: 44px
   padding: 5px 10px
-  position: relative
   transition: 0.2s
   width: 100%
 
@@ -57,8 +53,8 @@
   display: none
 
 .select-pure__selected-label
-  background: #5e6264
-  border-radius: 4px
+  background: $main-color
+  border-radius: 10px
   color: #fff
   cursor: initial
   display: inline-block
