--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -5,6 +5,7 @@
 @import burger
 @import page-pieces
 @import bases
+@import multiselect
 
 main
   width: 100%
@@ -59,15 +60,16 @@ table
 
 .filters
   display: flex
-  flex-direction: row
-  flex-wrap: wrap
+  flex-direction: column
   justify-content: center
+  align-items: center
 
 .filtering-menu
   display: flex
   flex-direction: row
   justify-content: center
   margin: 10px
+  height: 30px
   input[type="checkbox"],
   input[type="radio"]
     display: none
