--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -106,17 +106,27 @@
     align-items: flex-start
     font-size: 1.3em
   li
-    list-style-type: none
-    margin-top: 10px
-    text-align: left
     width: 100%
-    background: darken(#eee,5%)
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between  
+    .material-icons
+      margin-right: 5px
+  a
+    text-align: left
     padding: 5px 10px
+    margin: 10px
+    width: 100%
+    background: #e1e1e1
     border-radius: 10px
     &:hover
       background: darken(#eee,10%)
-    .material-icons
-      margin-right: 5px
+
+.delete-button
+  display: none
+  &:hover
+    color: $main-color
 
 @media (max-width: 470px)
   .favorites-menu, .login-menu
