--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -134,6 +134,16 @@ table
   margin: 5px
   z-index: 2
 
+.edit-button
+  position: absolute
+  top: 0
+  left: 0
+  margin: 5px
+  z-index: 2
+  &:hover
+    color: $main-color
+    cursor: pointer
+
 .show-card
   opacity: 1
   display: flex
