--- a/dev-server/app/templates/partials/html/route_filtering_menu.hbs
+++ b/dev-server/app/templates/partials/html/route_filtering_menu.hbs
@@ -6,7 +6,7 @@
 	var autocomplete = new SelectPure(".autocomplete-select", {
 	options: [
 		{
-			label: "All",
+			label: "All Routes",
 			value: "all",
 		},
 		{
