--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -46,14 +46,16 @@
     color: $main-color
 
 .find-a-route-inputs
-    width: 100%
-    margin: 10px 0
-    padding: 5px 10px
-    border-radius: 10px
-    background: #ddd
-    color: #000
-    font-family: $main-font
-    font-size: 1.2em
+  width: 100%
+  margin: 10px 0
+  padding: 5px 10px
+  border-radius: 10px
+  background: #ddd
+  color: #000
+  font-family: $main-font
+  font-size: 1.2em
+  &:focus
+    background: #fff
 
 .time-interval
     width: 100%
@@ -68,6 +70,8 @@
       color: #000
       font-family: $main-font
       font-size: 1em
+      &:focus
+        background: #fff
 
 #find-a-route-button
   font-size: 1.3em
@@ -160,11 +164,13 @@
     width: 100%
     margin: 10px 0
     padding: 5px 10px
-    border-radius: 20px
+    border-radius: 10px
     background: #ddd
     color: #000
     font-family: $main-font
     font-size: 1.2em
+    &:focus
+      background: #fff
 
 #login-button
   font-size: 1.3em
