--- a/dev-server/app/templates/partials/html/header.hbs
+++ b/dev-server/app/templates/partials/html/header.hbs
@@ -1,7 +1,7 @@
 	<header>
 		<div class="header-container">
 		    <div class="header-main-section">
-				<div class="burger" onclick="burgerMenuToggle(this)">
+				<div class="burger" onclick="burgerMenuToggle()">
 					<svg class="ham hamRotate ham8" viewBox="0 0 100 100" width="50" onclick="this.classList.toggle('active')">
 						<path class="line top" d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20" />
 						<path class="line middle" d="m 30,50 h 40" />
@@ -18,6 +18,11 @@
 				</nav>
 			</div>
 			<div class="header-buttons">
+				<div class="settings">
+					<a href="#" onclick="editTable()">
+						<i class="material-icons">settings</i>
+					</a>
+				</div>
 				<div class="favorites">
 					<a href="#" onclick="showFavorites()">
 						<i class="far fa-bookmark"></i>
