--- a/dev-server/app/templates/partials/html/header_menus.hbs
+++ b/dev-server/app/templates/partials/html/header_menus.hbs
@@ -3,11 +3,11 @@
 	<div class="edit-button" onclick="editFavorites()"><i class="material-icons">more_vert</i></div>
 	<h3>Favorites</h3>
 	<ul>
-		<li><a href="#"><i class="material-icons">directions_bus</i>Bus 46</a><div class="delete-button"><i class="fa fa-minus"></i></div></li>
-		<li><a href="#"><i class="material-icons">train</i>Train 102</a><div class="delete-button"><i class="fa fa-minus"></i></div></li>
-		<li><a href="#"><i class="material-icons">tram</i>Tram 59</a><div class="delete-button"><i class="fa fa-minus"></i></div></li>
-		<li><a href="#"><i class="fa fa-map-marker"></i>Maly V.O.</a><div class="delete-button"><i class="fa fa-minus"></i></div></li>
-		<li><a href="#"><i class="fa fa-map-marker"></i>Nevsky pr.</a><div class="delete-button"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="material-icons">directions_bus</i>Bus 46</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="material-icons">train</i>Train 102</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="material-icons">tram</i>Tram 59</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="fa fa-map-marker"></i>Maly V.O.</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
+		<li><a href="#"><i class="fa fa-map-marker"></i>Nevsky pr.</a><div class="delete-button" onclick="removeFromFavorites(this)"><i class="fa fa-minus"></i></div></li>
 	</ul>
 </div>
 <div class="login-menu">
